# attack

./: .gitignore  attack.opam  dune-project  flake.nix  todo.txt
.codex/: .txt  AGENTS.md  CONTEXT.md  analyzer-attack-log.txt  prune.txt  todo.txt  생각 끄적끄적
examples/: 0.d  1.d  2.d  3.d  4.d  5.d  attack.d  cmdsize.d
lib/analyzer/: abs_domain.ml  analyzer.ml  dom.ml  dom_ex.ml  dune  eval.ml  filter.ml  itv.ml
lib/language/: dune  interpreter.ml  lexer.mll  parser.mly  syntax.ml
lib/language/semantics/: 1.txt  bigStep.ml  bigStepChecker.ml  derivator.ml  environment.ml  semantics.ml  size.ml  visualizer.ml
lib/synthesis/: attack.ml  bottom_up.ml  component_table.ml  config.ml  dune  grow_prog.ml  grow_proof.ml  grow_util.ml  partition.ml  prune.ml  synthesizer.ml
lib/synthesis/component/: component_set.ml  set.ml  size.ml  util.ml
lib/synthesis/proof_tree/: node.ml
test/: dune  partition_test.ml  synthesis_test.ml
